tests/errors/casts/string-to-i32.fn
---
Description: Cast from string to i32 has no conversion
Expected: FN3206
---

type Program
{
    fn Main -> i32
    {
        var a = (i32)"hello"
        return 0
    }
}
